# A_Star_Implementation

./: A_Star.cpp  A_Star.h  A_star_UML.mdj  AutomaticControl.cpp  AutomaticControl.h  CMakeLists.txt  Game.cpp  Game.h  Graph.cpp  Graph.h  Implementation.cpp  Node_map.cpp  Node_map.h  Observer.h  README.md  Subject.h  entity.h  main.cpp  nodeMap.cpp  nodeMap.h  player.cpp  player.h
Assets/Config/: Config0.txt  Config1.txt  Config2.txt  Mappa senza pesi(PERFETTA).txt  Mappa.txt  Mappa1.txt  Mappa_.txt  Mappa_Buona.txt  Mappa_grill.txt  Mappa_perfetta.txt
Assets/Config/Mappe/: Mappa1.txt  Mappa2.txt
Tests/: CMakeLists.txt  Test1.cpp  Test1.h  Test_a_star_0.cpp  auto_movement_test_0.cpp  runAllTests.cpp  test_observer.cpp
Tests/lib/googletest-master/: CMakeLists.txt
Tests/lib/googletest-master/googlemock/test/: gmock_output_test.py
Tests/lib/googletest-master/googletest/scripts/: release_docs.py
Tests/lib/googletest-master/googletest/test/: googletest-env-var-test.py  gtest_help_test.py  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
